src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void BackgroundSubtractor_Delete(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractor_apply_0(void* self, void* image, void* fgmask, double learningRate);
extern "C" __declspec(dllexport) void BackgroundSubtractor_apply_1(void* self, void* image, void* knownForegroundMask, void* fgmask, double learningRate);
extern "C" __declspec(dllexport) void BackgroundSubtractor_getBackgroundImage_0(void* self, void* backgroundImage);
extern "C" __declspec(dllexport) void BackgroundSubtractorKNN_Delete(void* self);
extern "C" __declspec(dllexport) int BackgroundSubtractorKNN_getHistory_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorKNN_setHistory_0(void* self, int history);
extern "C" __declspec(dllexport) int BackgroundSubtractorKNN_getNSamples_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorKNN_setNSamples_0(void* self, int _nN);
extern "C" __declspec(dllexport) double BackgroundSubtractorKNN_getDist2Threshold_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorKNN_setDist2Threshold_0(void* self, double _dist2Threshold);
extern "C" __declspec(dllexport) int BackgroundSubtractorKNN_getkNNSamples_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorKNN_setkNNSamples_0(void* self, int _nkNN);
extern "C" __declspec(dllexport) bool BackgroundSubtractorKNN_getDetectShadows_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorKNN_setDetectShadows_0(void* self, bool detectShadows);
extern "C" __declspec(dllexport) int BackgroundSubtractorKNN_getShadowValue_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorKNN_setShadowValue_0(void* self, int value);
extern "C" __declspec(dllexport) double BackgroundSubtractorKNN_getShadowThreshold_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorKNN_setShadowThreshold_0(void* self, double threshold);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_Delete(void* self);
extern "C" __declspec(dllexport) int BackgroundSubtractorMOG2_getHistory_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setHistory_0(void* self, int history);
extern "C" __declspec(dllexport) int BackgroundSubtractorMOG2_getNMixtures_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setNMixtures_0(void* self, int nmixtures);
extern "C" __declspec(dllexport) double BackgroundSubtractorMOG2_getBackgroundRatio_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setBackgroundRatio_0(void* self, double ratio);
extern "C" __declspec(dllexport) double BackgroundSubtractorMOG2_getVarThreshold_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setVarThreshold_0(void* self, double varThreshold);
extern "C" __declspec(dllexport) double BackgroundSubtractorMOG2_getVarThresholdGen_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setVarThresholdGen_0(void* self, double varThresholdGen);
extern "C" __declspec(dllexport) double BackgroundSubtractorMOG2_getVarInit_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setVarInit_0(void* self, double varInit);
extern "C" __declspec(dllexport) double BackgroundSubtractorMOG2_getVarMin_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setVarMin_0(void* self, double varMin);
extern "C" __declspec(dllexport) double BackgroundSubtractorMOG2_getVarMax_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setVarMax_0(void* self, double varMax);
extern "C" __declspec(dllexport) double BackgroundSubtractorMOG2_getComplexityReductionThreshold_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setComplexityReductionThreshold_0(void* self, double ct);
extern "C" __declspec(dllexport) bool BackgroundSubtractorMOG2_getDetectShadows_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setDetectShadows_0(void* self, bool detectShadows);
extern "C" __declspec(dllexport) int BackgroundSubtractorMOG2_getShadowValue_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setShadowValue_0(void* self, int value);
extern "C" __declspec(dllexport) double BackgroundSubtractorMOG2_getShadowThreshold_0(void* self);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_setShadowThreshold_0(void* self, double threshold);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_apply_0(void* self, void* image, void* fgmask, double learningRate);
extern "C" __declspec(dllexport) void BackgroundSubtractorMOG2_apply_1(void* self, void* image, void* knownForegroundMask, void* fgmask, double learningRate);
extern "C" __declspec(dllexport) void DISOpticalFlow_Delete(void* self);
extern "C" __declspec(dllexport) int DISOpticalFlow_getFinestScale_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setFinestScale_0(void* self, int val);
extern "C" __declspec(dllexport) void DISOpticalFlow_setCoarsestScale_0(void* self, int val);
extern "C" __declspec(dllexport) int DISOpticalFlow_getCoarsestScale_0(void* self);
extern "C" __declspec(dllexport) int DISOpticalFlow_getPatchSize_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setPatchSize_0(void* self, int val);
extern "C" __declspec(dllexport) int DISOpticalFlow_getPatchStride_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setPatchStride_0(void* self, int val);
extern "C" __declspec(dllexport) int DISOpticalFlow_getGradientDescentIterations_0(void* self);