src/OpenCV5Sharp/Generated/NativeMethods.Video.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractor_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractor_apply_0(BackgroundSubtractorHandle self, MatHandle image, MatHandle fgmask, double learningRate);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractor_apply_1(BackgroundSubtractorHandle self, MatHandle image, MatHandle knownForegroundMask, MatHandle fgmask, double learningRate);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractor_getBackgroundImage_0(BackgroundSubtractorHandle self, MatHandle backgroundImage);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorKNN_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BackgroundSubtractorKNN_getHistory_0(BackgroundSubtractorKNNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorKNN_setHistory_0(BackgroundSubtractorKNNHandle self, int history);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BackgroundSubtractorKNN_getNSamples_0(BackgroundSubtractorKNNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorKNN_setNSamples_0(BackgroundSubtractorKNNHandle self, int _nN);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorKNN_getDist2Threshold_0(BackgroundSubtractorKNNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorKNN_setDist2Threshold_0(BackgroundSubtractorKNNHandle self, double _dist2Threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BackgroundSubtractorKNN_getkNNSamples_0(BackgroundSubtractorKNNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorKNN_setkNNSamples_0(BackgroundSubtractorKNNHandle self, int _nkNN);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool BackgroundSubtractorKNN_getDetectShadows_0(BackgroundSubtractorKNNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorKNN_setDetectShadows_0(BackgroundSubtractorKNNHandle self, [MarshalAs(UnmanagedType.U1)] bool detectShadows);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BackgroundSubtractorKNN_getShadowValue_0(BackgroundSubtractorKNNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorKNN_setShadowValue_0(BackgroundSubtractorKNNHandle self, int value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorKNN_getShadowThreshold_0(BackgroundSubtractorKNNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorKNN_setShadowThreshold_0(BackgroundSubtractorKNNHandle self, double threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BackgroundSubtractorMOG2_getHistory_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setHistory_0(BackgroundSubtractorMOG2Handle self, int history);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BackgroundSubtractorMOG2_getNMixtures_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setNMixtures_0(BackgroundSubtractorMOG2Handle self, int nmixtures);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorMOG2_getBackgroundRatio_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setBackgroundRatio_0(BackgroundSubtractorMOG2Handle self, double ratio);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorMOG2_getVarThreshold_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setVarThreshold_0(BackgroundSubtractorMOG2Handle self, double varThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorMOG2_getVarThresholdGen_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setVarThresholdGen_0(BackgroundSubtractorMOG2Handle self, double varThresholdGen);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorMOG2_getVarInit_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setVarInit_0(BackgroundSubtractorMOG2Handle self, double varInit);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorMOG2_getVarMin_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setVarMin_0(BackgroundSubtractorMOG2Handle self, double varMin);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorMOG2_getVarMax_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setVarMax_0(BackgroundSubtractorMOG2Handle self, double varMax);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorMOG2_getComplexityReductionThreshold_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setComplexityReductionThreshold_0(BackgroundSubtractorMOG2Handle self, double ct);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool BackgroundSubtractorMOG2_getDetectShadows_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setDetectShadows_0(BackgroundSubtractorMOG2Handle self, [MarshalAs(UnmanagedType.U1)] bool detectShadows);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BackgroundSubtractorMOG2_getShadowValue_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setShadowValue_0(BackgroundSubtractorMOG2Handle self, int value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double BackgroundSubtractorMOG2_getShadowThreshold_0(BackgroundSubtractorMOG2Handle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_setShadowThreshold_0(BackgroundSubtractorMOG2Handle self, double threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_apply_0(BackgroundSubtractorMOG2Handle self, MatHandle image, MatHandle fgmask, double learningRate);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BackgroundSubtractorMOG2_apply_1(BackgroundSubtractorMOG2Handle self, MatHandle image, MatHandle knownForegroundMask, MatHandle fgmask, double learningRate);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int DISOpticalFlow_getFinestScale_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setFinestScale_0(DISOpticalFlowHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setCoarsestScale_0(DISOpticalFlowHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int DISOpticalFlow_getCoarsestScale_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int DISOpticalFlow_getPatchSize_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setPatchSize_0(DISOpticalFlowHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int DISOpticalFlow_getPatchStride_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setPatchStride_0(DISOpticalFlowHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int DISOpticalFlow_getGradientDescentIterations_0(DISOpticalFlowHandle self);
